# plutus-voting-contract

./: .env  README.md  cabal.project  default.nix  flake.nix  voting-contract.cabal
app/: Main.hs
src/Voting/: Helper.hs  Type.hs  Validator.hs  Voting.hs  offchain.hs
test/: VotingSpec.hs  main.hs
