cabal-version: 3.0
name:         voting-contract
version:      1.0.0
description:  Plutus Voting Smart Contract
license:      Apache-2.0
license-file: LICENSE
author:       Plutus Developer
maintainer:   developer@example.com
build-type:   Simple

library
    exposed-modules:
        Voting
        Voting.Types
        Voting.Validator
        Voting.Helpers
        Voting.OffChain
    
    hs-source-dirs:   src
    build-depends:
        base >=4.14 && <4.19,
        plutus-tx,
        plutus-ledger-api,
        plutus-contract,
        aeson,
        bytestring,
        text,
        containers,
        mtl
    
    default-language: Haskell2010
    ghc-options: -Wall -Wno-name-shadowing -Wno-unused-matches

test-suite voting-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:
        base,
        voting-contract,
        hspec,
        plutus-tx,
        plutus-ledger-api
    
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable voting-app
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
        base,
        voting-contract
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N